# NitroCppTest-Nolasco

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh  run_tests.sh  setup.sh
src/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  example.json  main.cpp
src/rectangle/: CMakeLists.txt  Rectangle.h
src/utilities/: CMakeLists.txt  CustomList.cpp  CustomList.h  Intersector.cpp  Intersector.h  Rectangle.cpp  Rectangle.h
tests/: CMakeLists.txt  test_utilities.h  unit_Intersector.cpp  unit_Rectangle.cpp
tools/cmake-utils/: Libs.cmake  Tests.cmake
